--- a/Code/PerceptronFrontEnd/src/app/history/history.component.html
+++ b/Code/PerceptronFrontEnd/src/app/history/history.component.html
@@ -45,5 +45,6 @@
       <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
     </div>
     <br/>
-    <label style="color:red;">* Click on the table row for corresponding detailed results. </label>
+    <label style="color:red;">* Results are kept on the server for 2 days. Please download your results. There is no way to retrieve the data older than 48 hours. </label>
+    <label style="color:red;">** Click on the table row for corresponding detailed results. </label>
   </div>
