--- a/Code/PerceptronFrontEnd/src/app/repository/repository.component.html
+++ b/Code/PerceptronFrontEnd/src/app/repository/repository.component.html
@@ -22,10 +22,60 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let table of tables1">
+            <!-- <tr *ngFor="let table of tables1">
                 <td >{{table.dataset}}</td>
                 <td>{{table.id}}</td>
                 <td><a href="{{table.download}}" download="{{table.dataset}}">Download</a></td>
+            </tr> -->
+            <tr>
+                <td>HELA_pk13_sw1_66sc_mono.txt</td>
+                <td>1</td>
+                <td><a href="assets/DataFiles/HelaDataset/HELA_pk13_sw1_66sc_mono.txt" download="HELA_pk13_sw1_66sc_mono.txt">Download</a></td>
+            </tr>
+            <tr>
+                <td>HELA_pk17_sw1_140sc_mono.txt</td>
+                <td>2</td>
+                <td><a href="assets/DataFiles/HelaDataset/HELA_pk17_sw1_140sc_mono.txt" download="HELA_pk17_sw1_140sc_mono.txt">Download</a></td>
+            </tr>
+            <tr>
+                <td>HELA_pk18_sw1_160sc_mono.txt</td>
+                <td>3</td>
+                <td><a href="assets/DataFiles/HelaDataset/HELA_pk18_sw1_160sc_mono.txt" download="HELA_pk18_sw1_160sc_mono.txt">Download</a></td>
+            </tr>
+            <tr>
+                <td>HELA_pk18_sw2_160sc_mono.txt</td>
+                <td>4</td>
+                <td><a href="assets/DataFiles/HelaDataset/HELA_pk18_sw2_160sc_mono.txt" download="HELA_pk18_sw2_160sc_mono.txt">Download</a></td>
+            </tr>
+            <tr>
+                <td>HELA_pk19_sw1_210sc_mono.txt</td>
+                <td>5</td>
+                <td><a href="assets/DataFiles/HelaDataset/HELA_pk19_sw1_210sc_mono.txt" download="HELA_pk19_sw1_210sc_mono.txt">Download</a></td>
+            </tr>
+            <tr>
+                <td>HELA_pk19_sw2_255sc_mono.txt</td>
+                <td>6</td>
+                <td><a href="assets/DataFiles/HelaDataset/HELA_pk19_sw2_255sc_mono.txt" download="HELA_pk19_sw2_255sc_mono.txt">Download</a></td>
+            </tr>
+            <tr>
+                <td>HELA_pk19_sw3.1_147sc_mono.txt</td>
+                <td>7</td>
+                <td><a href="assets/DataFiles/HelaDataset/HELA_pk19_sw3.1_147sc_mono.txt" download="HELA_pk19_sw3.1_147sc_mono.txt">Download</a></td>
+            </tr>
+            <tr>
+                <td>HELA_pk20_sw1_205sc_mono.txt</td>
+                <td>8</td>
+                <td><a href="assets/DataFiles/HelaDataset/HELA_pk20_sw1_205sc_mono.txt" download="HELA_pk20_sw1_205sc_mono.txt">Download</a></td>
+            </tr>
+            <tr>
+                <td>HELA_pk20_sw2_202sc_mono.txt</td>
+                <td>9</td>
+                <td><a href="assets/DataFiles/HelaDataset/HELA_pk20_sw2_202sc_mono.txt" download="HELA_pk20_sw2_202sc_mono.txt">Download</a></td>
+            </tr>
+            <tr>
+                <td>HELA_pk20_sw3_215sc_mono.txt</td>
+                <td>10</td>
+                <td><a href="assets/DataFiles/HelaDataset/HELA_pk20_sw3_215sc_mono.txt" download="HELA_pk20_sw3_215sc_mono.txt">Download</a></td>
             </tr>
         </tbody>
     </table> 
