--- a/Code/PerceptronFrontEnd/src/app/results-visualization/results-visualization.component.css
+++ b/Code/PerceptronFrontEnd/src/app/results-visualization/results-visualization.component.css
@@ -27,7 +27,7 @@
   right: 5%;
   margin: 0 auto;
   position: relative;
-  background:orange;
+  background:rgba(255, 255, 255, 0.452);
 }
 /* 
 .chartContainer {
