--- a/Code/PerceptronFrontEnd/src/app/home/home.component.html
+++ b/Code/PerceptronFrontEnd/src/app/home/home.component.html
@@ -1,9 +1,37 @@
+<!doctype html>
+<html lang="en">
+<body>
 <div id="top" style="width:94%;  margin:0 auto;">
     <mat-card style = "height: 100%;padding-top: 2px;">
             <label style="padding-bottom:10px; text-align:center; font-size: 25px; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">PERCEPTRON - Proteoform Identification Pipeline for Top-Down Proteomics</label>
             <img src ="assets/images/WebHomepage.jpg" width="70%;" style=" margin-left: auto; margin-right: auto; display: block;" >
             <br>
-            <label style="padding-left:0px; font-size: 15px; font-family: roboto, arial, sans-serif;"><span style="font-weight:500">Users:</span> {{user}},&nbsp;&nbsp;<span style="font-weight:500">Searches Completed: </span>{{search}},&nbsp;&nbsp;<span style="font-weight:500">Databases Supported: </span>2  </label>
+            <div >
+            <!-- <label style="padding-left:0px; font-size: 15px; font-family: roboto, arial, sans-serif;"><span style="font-weight:500">Users:</span> {{user}},&nbsp;&nbsp;<span style="font-weight:500">Searches Completed: </span>{{search}},&nbsp;&nbsp;<span style="font-weight:500">Databases Supported: </span>2  <p style="float: right; font-size: 16px; font-weight: 500; font-family: roboto, arial, sans-serif;"><span>You are visitor number: </span><a href="https://www.freecounterstat.com" title="web counter"><img style="height: 13px; margin-top: -3px" src="https://counter8.stat.ovh/private/freecounterstat.php?c=6gas7dwyt58ug8kjrrbq4rrk1ybs3g5l" border="0" title="web counter" alt="web counter"></a></p></label> -->
+            <div style="padding-left:0px; float:left; font-size: 15px; font-family: roboto, arial, sans-serif;"><span style="font-weight:500">Users:</span> {{user}},&nbsp;&nbsp;<span style="font-weight:500">Searches Completed: </span>{{search}},&nbsp;&nbsp;<span style="font-weight:500">Databases Supported: </span>2 </div>
+            <!-- <script type="text/javascript"
+            src="https://www.statcounter.com/counter/counter.js"
+            async></script> -->
+            <div style="float:right;" class="statcounter"><p title="Web Analytics Made Easy -
+                StatCounter" href="https://statcounter.com/" target="_blank"><span style="font-weight:500; font-size: 15px;">You are visitor number: </span><img style="height: 15px"
+                class="statcounter" src="https://c.statcounter.com/12463970/0/aca174e5/0/"
+                alt="Web Analytics Made Easy - StatCounter"></p></div></div>
     </mat-card>
+    
     <br>
-</div>    
+</div>   
+<!-- Default Statcounter code for Perceptron https://perceptron.lums.edu.pk/ -->
+
+<script type="text/typescript">
+    var sc_project=12463970; 
+    var sc_invisible=0; 
+    var sc_security="aca174e5"; 
+    var sc_https=1; 
+    var scJsHost = "https://";
+    document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
+    "statcounter.com/counter/counter.js'></"+"script>");
+    </script>
+    <noscript></noscript>
+    <!-- End of Statcounter Code -->
+</body>
+</html>
