--- a/Code/PerceptronFrontEnd/src/app/app.component.html
+++ b/Code/PerceptronFrontEnd/src/app/app.component.html
@@ -232,14 +232,14 @@
 
       </button>
 
-      <div style="height:10px;font-size:1px;">&nbsp;</div>
+      <!-- <div style="height:10px;font-size:1px;">&nbsp;</div>
       <button matTooltip="Update/Download Protein Database" matTooltipPosition="after" mat-button
         style="color:grey; height: 45px; width:100%; text-align:left;   font-size:large;" (click)="adminpanel();" *ngIf="this.UserEmailID == 'farhan.khalid@lums.edu.pk'">
         <mat-icon class='iconclass' style="color: rgb(0, 60, 255);">person</mat-icon>
         <label
           style="display:inline-block;  color:#212121;cursor:pointer; font-size:15px; letter-spacing:0px; font-weight:500; font-family: Roboto, Arial, sans-serif;padding-left: 15px;">Admin Panel</label>
 
-      </button>
+      </button> -->
       <br>
     </nav>
   </mat-sidenav>
