--- a/Code/PerceptronFrontEnd/src/app/youtube/youtube.component.html
+++ b/Code/PerceptronFrontEnd/src/app/youtube/youtube.component.html
@@ -13,7 +13,7 @@
                 </mat-grid-tile>
                 <mat-grid-tile></mat-grid-tile>
                 <mat-grid-tile colspan="4">
-                    <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/5fgBn69byBY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/xk6UoyLrOqk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <!-- <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/aGDBLO5g88k?rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                 </mat-grid-tile>
             </mat-grid-list>
@@ -161,11 +161,11 @@
 
             <mat-grid-list cols="9" rowHeight="300">
                 <mat-grid-tile colspan="4">
-                    <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/QhYDYwJbHzI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/WmLYI7Gzp3Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </mat-grid-tile>
                 <mat-grid-tile></mat-grid-tile>
                 <mat-grid-tile colspan="4">
-                    <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/CyeEsEkGpXs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe style="border: 1px solid black" width="560" height="290" src="https://www.youtube.com/embed/id9Ol0UIeow" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </mat-grid-tile>
             </mat-grid-list>
 
